# lazy-rabbit-secretary

./: .cursorignore  .cursorrules  .gitignore  HELP.md  README.md  build.gradle  docker-compose.yml  fabfile.py  start.sh
.cursor/rules/: basic.mdc  front-end-cursor-rules.mdc
backend/: .dockerignore  Dockerfile  Makefile  build.sh  build_docker_image.sh  generate-certs.sh  go.mod  go.sum  main.go  pom.xml  start.sh
backend/bdd/: Makefile  godog.yaml  main_test.go
backend/bdd/features/: cron_job.feature  task_reminding.feature  user_registration.feature
backend/bdd/steps/: task_reminding_steps.go  user_registration_steps.go
backend/bdd/support/: test_helpers.go
backend/certs/: cert.pem  key.pem
backend/cmd/: blog.go  cronjob.go  email.go  root.go  server.go  version.go
backend/config/: config.yaml  email_template.yaml  prompts.yaml
backend/internal/api/: web_command.go  web_service.go
backend/internal/auth/: errors.go  example_integration.go  handlers.go  jwt.go  middleware.go  models.go  oauth.go  password.go  permission.go  permission_handlers.go  (+9 more)
deploy/: config.yaml  docker-compose.yml  env.example
deploy/nginx/: default.conf
deploy/redis/: redis.conf
doc/source/: conf.py  index.rst
frontend/: .env.development  .env.example  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  test-secrets-api.html  test-secrets-api.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
test/: Makefile  README.md  conftest.py  env.example  pyproject.toml  run_tests.sh  test_secret_api.py  test_task_api.py
(+308 files in other folders)
